# bachelors_thesis

./: README.md
linear_velocity/: CMakeLists.txt  linear_velocity.cpp  tcp_mg.cpp  tcp_mg.h  tcp_positions.py
tcp_mg/: CMakeLists.txt  plot_joint_states.py  tcp_mg.cpp  tcp_mg_tester.cpp
